--- a/TodoWithAuth.Application/TodoWithAuth.Application.csproj
+++ b/TodoWithAuth.Application/TodoWithAuth.Application.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="AutoMapper" Version="12.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TodoApi.Core\TodoApi.Core.csproj" />
+  </ItemGroup>
+
 </Project>
